# route-optimization-vrp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: smoke.yml
data/: stops.csv
src/: app.py  baseline_solver.py  cvrp_solver.py  distance.py  export_readme_images.py  generate_data.py  geo.py
tests/: test_data.py  test_distance.py  test_geo.py  test_solvers.py
