[project]
name = "route-optimization-vrp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "ortools>=9.15.6755",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydeck>=0.9.3",
    "streamlit>=1.59.1",
]

[dependency-groups]
dev = [
    "kaleido>=1.3.0",
    "pytest>=9.1.1",
]
